<resources>
    <string name="s_appName">Homework_6</string>

    <string name="s_pleaseEnterYourName">Please enter Your name</string>

    <string name="s_filed1">Field 1</string>
    <string name="s_filed2">Field 2</string>
    <string name="s_filed3">Field 3</string>


    <string name="s_loremIpsum">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>

</resources>