<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/d_size_30dp"
    android:paddingRight="@dimen/d_size_30dp"
    android:paddingBottom="@dimen/d_size_15dp"
    android:paddingTop="@dimen/d_size_15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sel_sh_tv"

        android:id="@+id/tv_Name_AM"

        android:clickable="true"

        android:text="@string/s_pleaseEnterYourName"
        android:textAllCaps="false"
        android:textColor="@color/sel_c_btn_text"
        android:textSize="@dimen/d_textSize_20sp"
        android:gravity="center"

        android:layout_centerHorizontal="true" />

    <EditText
        style="@style/stl_EditTextStyle"

        android:id="@+id/et_Filed1_AM"

        android:hint="@string/s_filed1"

        android:layout_below="@id/tv_Name_AM"
        android:layout_marginTop="@dimen/d_size_15dp"/>

    <EditText
        style="@style/stl_EditTextStyle"

        android:id="@+id/et_Filed2_AM"
        android:hint="@string/s_filed2"

        android:layout_below="@id/et_Filed1_AM"
        android:layout_marginTop="@dimen/d_size_15dp"/>

    <EditText
        style="@style/stl_EditTextStyle"

        android:id="@+id/et_Filed3_AM"
        android:hint="@string/s_filed3"

        android:enabled="false"

        android:layout_below="@id/et_Filed2_AM"
        android:layout_marginTop="@dimen/d_size_15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"

        android:id="@+id/tv_LoremIpsum_AM"
        android:text="@string/s_loremIpsum"

        android:layout_below="@id/et_Filed3_AM"
        android:layout_marginTop="@dimen/d_size_15dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/sel_ll_btn"

        android:id="@+id/btn_Square_AM"

        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_LoremIpsum_AM"
        android:layout_marginTop="@dimen/d_size_15dp" />

</RelativeLayout>
</ScrollView>